fix mixed content and css opacity

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ev-calc",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://bbotezatu.github.io/ev-calc-app/",
+  "homepage": "https://HarunaOrg.github.io/ev-calc-app/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
